--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     tools:context="com.home.dab.datum.MainActivity">
 
     <Button
-        android:onClick=""
+        android:onClick="download"
+        android:text="download"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
