增加二级联动

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,9 @@
         android:layout_height="wrap_content"
         android:onClick="changeIcon"
         android:text="修改app图标和名字"/>
+    <Button
+        android:onClick="shoppingCart"
+        android:text="二级联动"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
