--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <Button
         android:onClick="download"
-        android:text="download"
+        android:text="下载"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
