--- a/app/src/main/res/layout/activity_coordinator_layout_test.xml
+++ b/app/src/main/res/layout/activity_coordinator_layout_test.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:onClick="hideHead"
         android:text="隐藏头布局"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="recycler"
+        android:text="对recycler添加头脚"/>
 </LinearLayout>
