--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,4 +42,10 @@
         android:layout_height="wrap_content"
         android:onClick="crypto"
         android:text="加密解密"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="recyclerView"
+        android:text="recyler的练习"/>
 </LinearLayout>
