添加一个自定义btn的打开动画

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,10 @@
         android:layout_height="wrap_content"
         android:onClick="share"
         android:text="分享的练习"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="myView"
+        android:text="自定义的练习"/>
 </LinearLayout>
