--- a/app/src/main/res/layout/activity_text_input_layout.xml
+++ b/app/src/main/res/layout/activity_text_input_layout.xml
@@ -7,10 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.home.dab.datum.demo.md.textInputLayout.TextInputLayout">
 
     <android.support.design.widget.TextInputLayout
@@ -36,7 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="请输入密码:"/>
+            android:hint="请输入密码:"
+            android:drawableLeft="@mipmap/ic_launcher"/>
     </android.support.design.widget.TextInputLayout>
 
 
