--- a/app/src/main/res/layout/activity_recycler_demo.xml
+++ b/app/src/main/res/layout/activity_recycler_demo.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:onClick="nested"
         android:text="嵌套"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="picker"
+        android:text="picker"/>
 </LinearLayout>
