--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,4 +98,11 @@
         android:layout_weight="1"
         android:onClick="picker"
         android:text="仿picker"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:onClick="camera"
+        android:text="Camera"/>
 </LinearLayout>
